src/index.css
@import 'antd/dist/antd.dark.css';

.app {
  padding-top: 20px;
}

h1.app-title {
  color: var(--antd-wave-shadow-color);

  @media screen and (max-width: 550px) {
    font-size: 25px;
  }

  @media screen and (max-width: 470px) {
    font-size: 20px;
    margin-bottom: 55px;
  }
}

h3.app-goal {
  @media screen and (max-width: 550px) {
    font-size: 20px;
  }
}

.explanation-icon {
  font-size: 17px;
  position: relative;
  top: -17px;
  left: -7px;
  color: rgba(255, 255, 255, 0.85);
}

.ant-timeline.control-timeline {
  .ant-timeline-item-pending {
    font-size: 0;

    .ant-timeline-item-content {
      min-height: 10px;
      top: auto;
    }
  }

  @media screen and (max-width: 470px) {
    .ant-timeline-item-content {
      margin-left: 14px;
    }
  }
}

@media screen and (max-width: 550px) {
  .ant-form label.day-checkbox {
    font-size: 11px;

    & .ant-checkbox + span {
      padding-right: 3px;
      padding-left: 4px;
    }
  }

  h4.day-title {
    font-size: 13px;
    padding-top: 3px;
  }
}

@media screen and (max-width: 470px) {
  .ant-form label.day-checkbox {
    font-size: 10px;
    padding-top: 5px;

    .ant-checkbox-inner {
      width: 10px;
      height: 10px;

      &::after {
        left: 1px;
        width: 5px;
        height: 7px;
      }
    }
  }

  h4.day-title {
    font-size: 12px;
  }
}

@media screen and (max-width: 450px) {
  .ant-form label.day-checkbox {
    font-size: 9px;
  }

  h4.day-title {
    font-size: 11px;
    padding-top: 5px;
  }
}

.layout-select-wrapper {
  position: absolute;
  top: 13px;
  right: calc(10px + 40px + 7px);

  .ant-affix {
    top: 13px !important;
  }

  @media screen and (max-width: 470px) {
    right: auto;
    left: 14px;
    top: 55px;

    .ant-affix {
      top: 55px !important;
    }
  }
}

.delete-button-wrapper {
  position: absolute;
  top: 10px;
  right: 10px;

  .ant-affix {
    top: 10px !important;
  }

  @media screen and (max-width: 470px) {
    top: 15px;

    .ant-affix {
      top: 15px !important;
    }
  }
}

